01 Apuntes/DAM/Introducción a la nube publica/Tema 5/Actividad 3/vpccreation.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "VPC del ejercicio"

Parameters:
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Nom del KeyPair per a SSH
    Default: awsKeys

Resources:
  MiVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 172.12.0.0/16
      Tags:
        - Key: Name
          Value: CF-VPC-PedroGuill
    DeletionPolicy: Retain

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: CF-IGW-PedroGuill
    DeletionPolicy: Retain

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MiVPC
      InternetGatewayId: !Ref InternetGateway
    DeletionPolicy: Retain

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MiVPC
      CidrBlock: 172.12.0.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [0, !GetAZs ""]
      Tags:
        - Key: Name
          Value: CF-Public-Subnet-PedroGuill1
    DeletionPolicy: Retain

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MiVPC
      CidrBlock: 172.12.0.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [0, !GetAZs ""]
      Tags:
        - Key: Name
          Value: CF-Public-Subnet-PedroGuill2
    DeletionPolicy: Retain

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MiVPC
      CidrBlock: 172.12.0.0/24
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Select [0, !GetAZs ""]
      Tags:
        - Key: Name
          Value: CF-Private-Subnet-PedroGuill1
    DeletionPolicy: Retain
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MiVPC
      CidrBlock: 172.12.0.0/24
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Select [0, !GetAZs ""]
      Tags:
        - Key: Name
          Value: CF-Private-Subnet-PedroGuill2
    DeletionPolicy: Retain

  PublicRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MiVPC
      Tags:
        - Key: Name
          Value: CF-Public-RT-PedroGuill1
    DeletionPolicy: Retain

  PublicRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MiVPC
      Tags:
        - Key: Name
          Value: CF-Public-RT-PedroGuill2
    DeletionPolicy: Retain

  PublicRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
    DeletionPolicy: Retain

  PublicRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
    DeletionPolicy: Retain

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable1

  PublicSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable2

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MiVPC
      Tags:
        - Key: Name
          Value: CF-Private-RT-PedroGuill1
    DeletionPolicy: Retain

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MiVPC
      Tags:
        - Key: Name
          Value: CF-Private-RT-PedroGuill2
    DeletionPolicy: Retain

  PrivateSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable1
    DeletionPolicy: Retain

  PrivateSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable2
    DeletionPolicy: Retain

  PublicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SG per a públic SSH
      VpcId: !Ref MiVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: securityGroup
    DeletionPolicy: Retain
